# cgae_solana

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY_QUICK.md  Dockerfile  README.md  modal_deploy.py  requirements-modal.txt  requirements.txt
.github/workflows/: sync-to-hf.yml
.streamlit/: config.toml
agents/: __init__.py  autonomous.py  base.py  strategies.py
cgae_engine/: __init__.py  audit.py  contracts.py  economy.py  framework_clients.py  gate.py  llm_agent.py  marketplace.py  models_config.py  registry.py  solana_client.py  tasks.py  temporal.py  verifier.py
contracts/: deployed.json
dashboard-ui/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard-ui/app/: error.tsx  globals.css  layout.tsx  page.tsx
docs/: index.html
hf_backend/: Dockerfile  README.md  app.py  dashboard.html
scripts/: prepare_deploy.sh  run_demo_hosted.sh  video_demo.py
server/: __init__.py  api.py  live_runner.py  runner.py
server/live_results/: agent_details.json  economy_state.json  final_summary.json  protocol_events.json  (+4 more)
solana_contracts/: Anchor.toml
solana_contracts/programs/cgae/: Cargo.toml
solana_contracts/programs/cgae/src/: error.rs  lib.rs  state.rs
solana_contracts/programs/cgae/src/instructions/: accept_contract.rs  certify_agent.rs  complete_contract.rs  create_contract.rs  expire_contract.rs  fail_contract.rs  initialize.rs  mod.rs  register_agent.rs
solana_contracts/programs/cgae/tests/: test_initialize.rs
storage/: solana_store.py
tests/: test_api.py  test_live_runner.py  test_tasks.py  test_verifier.py
(+47 files in other folders)
