[package]
name = "cgae"
version = "0.1.0"
description = "CGAE: Comprehension-Gated Agent Economy on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cgae"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-system-interface = "2.0"
solana-instruction = "3.0"
solana-pubkey = "3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
